# celo-threshold-bls-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  create-ndk-standalone.sh  rust-toolchain.toml  tree.txt
.circleci/: config.yml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  check-and-lint.yaml  ci.yml  contracts-and-cross.yaml  rust_ci.yml  test.yaml  test.yml
crates/dkg-cli/: CELO_README.md  Cargo.toml  Dockerfile  README.md  automated.md  blockchain_test.sh  build.rs  cli_test.sh  register_dkg.sh  resharing_test.sh  run_dkg.sh
crates/dkg-cli/src/: actions.rs  dkg_contract.rs  lib.rs  main.rs  opts.rs
crates/dkg-cli/src/coordinator/: actions.rs  opts.rs
crates/dkg-cli/src/user/: actions.rs  opts.rs
crates/dkg-core/: Cargo.toml  README.md
crates/dkg-core/src/: board.rs  lib.rs  node.rs  primitives.rs  test_helpers.rs
crates/dkg-core/src/dkg_impls/: common.rs  joint_feldman.rs  mod.rs  resharing.rs
crates/dkg-core/src/primitives/: common.rs  errors.rs  group.rs  joint_feldman.rs  mod.rs  phases.rs  resharing.rs  states.rs  status.rs  types.rs
crates/threshold-bls/: Cargo.toml  README.md
crates/threshold-bls-ffi/: Cargo.toml  README.md  threshold.h
crates/threshold-bls-ffi/cross/: Makefile  cargo-config.toml.template  create-ndk-standalone.sh  threshold.h
crates/threshold-bls-ffi/src/: ffi.rs  jni_bridge.rs  jvm.rs  lib.rs  wasm.rs  wasm_test.rs
crates/threshold-bls/src/: ecies.rs  group.rs  lib.rs  poly.rs  serialization.rs  test_vectors.rs
crates/threshold-bls/src/curve/: bls12377.rs  bls12381.rs  mod.rs  zexe.rs
crates/threshold-bls/src/sig/: blind.rs  bls.rs  mod.rs  sig.rs  tblind.rs  tbls.rs
cross/: Makefile  create-ndk-standalone.sh
examples/: blind.js  tblind.js
examples/tblind/: board.rs  curve.rs  main.rs  node.rs  orchestrator.rs
ffi/: threshold.h
solidity/: .solhint.json  README.md  buidler.config.ts  foundry.toml  package.json  tsconfig.json
solidity/artifacts/DKG.sol/: DKG.json
solidity/contracts/: DKG.sol
solidity/scripts/: deploy.ts
solidity/test/: dkg.spec.ts
src/: dkg.rs  ecies.rs  ffi.rs  group.rs  lib.rs  poly.rs  wasm.rs
src/curve/: bls12381.rs  mod.rs  zexe.rs
src/dkg/: board.rs  node.rs  primitives.rs  test_helpers.rs
src/sig/: blind.rs  bls.rs  mod.rs  sig.rs  tblind.rs  tbls.rs  wasm.rs
src/wasm/: bls12_377.rs  mod.rs
