[workspace]

members = [ 
    "crates/dkg-cli",
    "crates/dkg-core", 
    "crates/threshold-bls",
    "crates/threshold-bls-ffi",
]

[profile.release]
opt-level = "z"
lto = true
incremental = true
strip = true

# build all our deps in release mode 
[profile.dev.package."*"]
opt-level = 3

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false


[profile.test]
opt-level = 3
incremental = true
debug-assertions = true
debug = true

