[workspace]

members = [
    "crates/threshold-bls",
    "crates/threshold-bls-ffi",
]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

# build all our deps in release mode 
[profile.dev.package."*"]
opt-level = 3

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false


[profile.test]
opt-level = 3
incremental = true
debug-assertions = true
debug = true

[patch."https://github.com/scipr-lab/zexe"]
algebra = { git = "https://github.com/arkworks-rs/snark", package = "algebra", rev = "9d267f65733b9684ad6da9af31b945515f1a9474" }
algebra-core-derive = { git = "https://github.com/arkworks-rs/snark", package = "algebra-core-derive", rev = "9d267f65733b9684ad6da9af31b945515f1a9474" }
bench-utils = { git = "https://github.com/arkworks-rs/snark", package = "bench-utils", rev = "9d267f65733b9684ad6da9af31b945515f1a9474" }
crypto-primitives = { git = "https://github.com/arkworks-rs/snark", package = "crypto-primitives", rev = "9d267f65733b9684ad6da9af31b945515f1a9474" }