[package]
name = "dkg-cli"
version = "0.3.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>", "Michael Straka <mstraka100@gmail.com>"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "force-build"
path = "build.rs"
#required-features = ["build_deps"]  # only needed for build-dependencies

[dependencies]
dkg-core = { path = "../dkg-core" }
threshold-bls = { path = "../threshold-bls", default-features = false }

gumdrop = "0.7.0"
rand = "0.8.5"
bincode = "1.2.1"
glob = "0.3.0"
serde = "1.0.106"
thiserror = "1.0.15"
serde_json = "1.0.53"
hex = "0.4.2"
anyhow = "1.0.31"

ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "123e2def9d96668e202d7b11842821c7f4080283", features = ["celo"] }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", rev = "123e2def9d96668e202d7b11842821c7f4080283" }
futures = "0.3.5"
async-trait = "0.1.35"
tokio = { version = "1", features = ["macros", "time"] }
rustc-hex = "2.1.0"
clt = "0.0.6"

[build-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "123e2def9d96668e202d7b11842821c7f4080283", features = ["celo", "abigen"] }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", rev = "123e2def9d96668e202d7b11842821c7f4080283" }
serde = "1.0.106"
serde_json = "1.0.53"
