[package]
name = "dkg-cli"
version = "0.3.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>", "Michael Straka <mstraka100@gmail.com>"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "force-build"
path = "build.rs"
#required-features = ["build_deps"]  # only needed for build-dependencies

[dependencies]
dkg-core = { path = "../dkg-core" }
threshold-bls = { path = "../threshold-bls", default-features = false }

gumdrop = "0.8.1"
rand = "0.8.5"
bincode = "1.2.1"
glob = "0.3.0"
serde = "1.0.106"
thiserror = "1.0.15"
serde_json = "1.0.53"
hex = "0.4.2"
anyhow = "1.0.31"

ethers = { version = "1.0.0" , features = ["celo"] }
ethers-solc = "1.0.0"
futures = "0.3.5"
async-trait = "0.1.35"
tokio = { version = "1.23.1", features = ["macros", "time"] }
rustc-hex = "2.1.0"
clt = "0.0.6"

[build-dependencies]
ethers = { version = "1.0.0" , features = ["celo", "abigen"] }
ethers-solc = "1.0.0"
serde = "1.0.106"
serde_json = "1.0.53"
