[package]
name = "dkg-core"
version = "0.3.0"
authors = ["nikkolasg", "Georgios Konstantopoulos <me@gakonst.com>", "Michael Straka <mstraka100@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
threshold-bls = { path = "../threshold-bls", default-features = false }

async-trait = "0.1.35"
bitvec = { version = "0.17.4", default-features = false, features = ["std", "alloc", "serde"] }
bincode = "1.2.1"
rand_core = { version = "0.6.3", default-features = false }
rand = "0.8.5"
static_assertions = "1.1.0"
serde = {version = "1.0.106", features = ["derive"] }
thiserror = "1.0.15"

[dev-dependencies]
threshold-bls = { path = "../threshold-bls", default-features = false }
tokio = { version = "1.24.2", features = ["full"] }
