[package]
name = "threshold-bls"
version = "0.2.0"
authors = ["nikkolasg", "Paul Lange <palango@gmx.de>"]
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
rand_chacha = "0.3"
rand_core = { version = "0.6", default-features = false }
rand = "0.8"
serde = {version = "1.0.106", features = ["derive"] }

# for ECIES
chacha20poly1305 = "0.5"
hkdf = "0.8"
sha2 = "0.8"

# bls12_377
ark-bls12-377 = { version = "0.3.0" }
ark-serialize = { version = "0.3.0", features = [ "derive" ] }
ark-ff = { version = "0.3.0", features = [ "std" ] }
ark-ec = { version = "0.3.0", features = [ "std" ] }
bls-crypto = { git = "https://github.com/celo-org/bls-crypto" }
thiserror = "1.0"
bincode = "1.2"

[dev-dependencies]
proptest = "1.0.0"
static_assertions = "1.1.0"
hex = "0.4.3"
num-bigint = "0.4"
serde_json = "1.0"

# [features]
# # Enable parallel computation. Cannot be used with WASM.
# parallel = ["ark-ec/parallel", "ark-ff/parallel", "bls-crypto/parallel"]
