[package]
name = "threshold-bls"
version = "0.1.0"
authors = ["nikkolasg"]
edition = "2018"

[lib]
crate-type = ["lib"]

[dependencies]
rand_core = { version = "0.5.1", default-features = false }
rand = "0.7"
rand_chacha = "0.2.2"
serde = {version = "1.0.106", features = ["derive"] }

# for ECIES
chacha20poly1305 = "0.3"
hkdf = "0.8"
sha2 = "0.8"

# bls12_381
paired = { version = "0.18", features = ["serde"], optional = true }
ff = { version = "0.2", package = "fff", optional = true }
groupy = {version = "0.3", optional = true }


# bls12_377
algebra = { git = "https://github.com/celo-org/arkworks-v0.1.1-patch", package = "algebra", branch = "patch-rust-compat", features = ["bls12_377"], optional = true }
bls-crypto = { git = "https://github.com/celo-org/bls-zexe", rev = "879630a7d95794994e31c874934d04b3c5904892", optional = true }
thiserror = "1.0.15"
bincode = "1.2.1"

[features]
default = ["bls12_381", "bls12_377"]
bls12_377 = ["algebra", "bls-crypto"]
bls12_381 = ["paired", "groupy", "ff"]

[dev-dependencies]
static_assertions = "1.1.0"
proptest = "0.9.6"
hex = "0.4.3"
num-bigint = "0.4"
serde_json = "1.0"
